Fixed text animation on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,10 @@
-@mixin displayProperties($display,
+@mixin displayProperties(
+  $display,
   $width,
   $justify_content,
   $align_items,
-  $flex_flow) {
+  $flex_flow
+) {
   display: $display;
   width: $width;
   justify-content: $justify_content;
@@ -55,7 +57,7 @@ body {
   @include displayProperties(flex, 100%, center, unset, unset);
   background-color: #181a21;
 
-  &>.container {
+  & > .container {
     @include displayProperties(inherit, inherit, space-between, inherit, wrap);
   }
 }
@@ -161,7 +163,7 @@ pre {
 
   span:nth-child(1) {
     @include fontPodkova(unset, unset, 119px, 100%);
-    font-feature-settings: 'pnum'on, 'lnum'on;
+    font-feature-settings: 'pnum' on, 'lnum' on;
   }
 }
 
@@ -213,7 +215,6 @@ pre {
     visibility: visible;
   }
 }
-
 
 .navbar-collapse__list {
   list-style-type: none;
@@ -341,7 +342,7 @@ pre {
   width: 100%;
   padding-top: 9.375rem;
 
-  &>.title {
+  & > .title {
     margin-bottom: 25px;
   }
 }
@@ -417,7 +418,7 @@ pre {
   max-width: 1250px;
   padding-left: 23.125rem;
 
-  &>.title {
+  & > .title {
     border-bottom: 1px solid rgba(241, 241, 241, 0.3);
     margin: 0;
   }
@@ -449,6 +450,16 @@ pre {
   }
 }
 
+@keyframes animate-mobile {
+  0% {
+    transform: translate(-250%, 0);
+  }
+
+  100% {
+    transform: translate(100%, 0);
+  }
+}
+
 @keyframes animate-table {
   0% {
     transform: translate(-150%, 0);
@@ -467,7 +478,7 @@ pre {
   display: flex;
   border-bottom: 1px solid rgba(241, 241, 241, 0.3);
 
-  &>.meet-people-name {
+  & > .meet-people-name {
     @include displayProperties(flex, 100%, center, unset, column);
     max-width: 440px;
     padding-left: 40px;
@@ -594,7 +605,7 @@ pre {
     color: black;
   }
 
-  &>.container {
+  & > .container {
     flex: 5 1 1200px;
   }
 }
@@ -893,7 +904,7 @@ pre {
 }
 
 .swiper-container-horizontal {
-  &>.swiper-pagination-bullets {
+  & > .swiper-pagination-bullets {
     .swiper-pagination-bullet {
       margin: 0 !important;
     }
@@ -1016,7 +1027,7 @@ pre {
   }
 
   .separate-info-block-left {
-    &>.achievement__description {
+    & > .achievement__description {
       flex-direction: row;
     }
   }
@@ -1049,10 +1060,16 @@ pre {
   }
 
   .customers-logo {
-    &>div {
+    & > div {
       width: 100%;
       padding: 1rem 0;
       margin: 0;
+    }
+  }
+
+  .meet-people__header {
+    p {
+      animation: animate-mobile 6s linear infinite;
     }
   }
 }
@@ -1323,7 +1340,7 @@ pre {
   }
 
   .fifth-block {
-    &>.container {
+    & > .container {
       padding-bottom: 4.875rem;
     }
   }
@@ -1366,7 +1383,7 @@ pre {
   }
 
   .fourth-block {
-    &>.container-right-side {
+    & > .container-right-side {
       padding: 3.75rem 3.125rem 0 3.125rem;
     }
   }
@@ -1417,6 +1434,12 @@ pre {
     }
   }
 
+  .meet-people__header {
+    p {
+      animation: animate-table 6s linear infinite;
+    }
+  }
+
   .navbar {
     // ul {
     //   li {
@@ -1464,7 +1487,7 @@ pre {
   }
 
   .fifth-block {
-    &>.container {
+    & > .container {
       padding-bottom: 9.375rem;
     }
   }
@@ -1493,7 +1516,7 @@ pre {
   }
 
   .meet-people-specialization--fullstack {
-    &>.meet-people-name {
+    & > .meet-people-name {
       padding-left: 0;
       max-width: 250px;
     }
@@ -1542,7 +1565,7 @@ pre {
   }
 
   .fifth-block {
-    &>.container {
+    & > .container {
       flex-wrap: wrap;
     }
   }
@@ -1566,7 +1589,7 @@ pre {
   //     flex-direction: row;
   //   }
   .footer {
-    &>.container {
+    & > .container {
       grid-template-columns: 50% 50%;
       grid-template-areas:
         'footer-nav social-media'
@@ -1692,9 +1715,9 @@ pre {
     padding-bottom: 7.813rem;
     animation: none;
 
-    p {
-      animation: animate-table 6s linear infinite;
-    }
+    // p {
+    //   animation: animate-table 6s linear infinite;
+    // }
   }
 
   .meet-people-specialization--fullstack {
@@ -1906,7 +1929,7 @@ pre {
 
 @media only screen and (max-width: 1224px) {
   .fourth-block {
-    &>.container {
+    & > .container {
       padding: 0;
     }
   }
@@ -1989,7 +2012,7 @@ pre {
   }
 
   .second-block {
-    &>.container {
+    & > .container {
       flex-wrap: wrap;
       justify-content: center;
     }
@@ -2096,7 +2119,7 @@ pre {
 
 @media only screen and (min-width: 1481px) and (max-width: 1620px) {
   .first-block {
-    &>.container {
+    & > .container {
       flex-wrap: nowrap;
     }
   }
@@ -2210,7 +2233,6 @@ pre {
 }
 
 @media only screen and (min-width: 1920px) {
-
   .ready-discuss__ready,
   .ready-discuss__discuss {
     font-size: 6.198vw;
